--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
   "name": "kingsman-frontend",
-  "builds": [
-    {
-      "src": "Frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "installCommand": "npm install",
+  "rootDirectory": "Frontend",
   "routes": [
     {
       "src": "/static/(.*)",
