--- a/vercel.json
+++ b/vercel.json
@@ -1,63 +1,7 @@
 {
-  "version": 2,
-  "name": "kingsman-frontend",
-  "buildCommand": "npm run build",
-  "outputDirectory": "build",
-  "installCommand": "npm install",
-  "rootDirectory": "Frontend",
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "headers": {
-        "cache-control": "s-maxage=31536000,immutable"
-      },
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/favicon.ico"
-    },
-    {
-      "src": "/asset-manifest.json",
-      "dest": "/asset-manifest.json"
-    },
-    {
-      "src": "/manifest.json",
-      "dest": "/manifest.json"
-    },
-    {
-      "src": "/robots.txt",
-      "dest": "/robots.txt"
-    },
-    {
-      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
-      "headers": {
-        "cache-control": "s-maxage=31536000,immutable"
-      },
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "env": {
-    "REACT_APP_API_URL": "@react_app_api_url",
-    "REACT_APP_SERVER_URL": "@react_app_server_url", 
-    "REACT_APP_SOCKET_URL": "@react_app_socket_url",
-    "REACT_APP_ENVIRONMENT": "production"
-  },
-  "build": {
-    "env": {
-      "REACT_APP_API_URL": "@react_app_api_url",
-      "REACT_APP_SERVER_URL": "@react_app_server_url",
-      "REACT_APP_SOCKET_URL": "@react_app_socket_url", 
-      "REACT_APP_ENVIRONMENT": "production"
-    }
-  },
-  "functions": {
-    "Frontend/src/**/*.js": {
-      "excludeFiles": "{test/**,**/*.test.js,**/*.spec.js}"
-    }
-  }
+  "buildCommand": "cd Frontend && npm ci && npm run build",
+  "outputDirectory": "Frontend/build",
+  "installCommand": "npm install --prefix Frontend",
+  "devCommand": "cd Frontend && npm start",
+  "framework": "create-react-app"
 }
