--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,6 +2,10 @@
   "name": "food-ordering-frontend",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@stripe/react-stripe-js": "^2.4.0",
