--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd Frontend && npm install && npm run build",
+  "buildCommand": "cd Frontend && npm ci --only=production && npm run build",
   "outputDirectory": "Frontend/build",
-  "installCommand": "echo 'Skip root install'",
-  "devCommand": "cd Frontend && npm start"
+  "installCommand": "npm install --prefix Frontend",
+  "framework": "create-react-app"
 }
